--- a/Real_Estate_Buyer/src/main/webapp/static/css/style/main-style.css
+++ b/Real_Estate_Buyer/src/main/webapp/static/css/style/main-style.css
@@ -9,3 +9,7 @@ body{
 	background: rgba(255, 255, 255, 0.8);
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
+
+.display_block {
+	display: block;
+}
