--- a/Real_Estate_Buyer/src/main/webapp/static/css/style/main-style.css
+++ b/Real_Estate_Buyer/src/main/webapp/static/css/style/main-style.css
@@ -1,15 +1,86 @@
-body{
-    background-color: #525252;
+.body {
+	background-color: #525252;
 }
-.centered-form{
+
+.centered-form {
 	margin-top: 60px;
 }
 
-.centered-form .panel{
+.centered-form .panel {
 	background: rgba(255, 255, 255, 0.8);
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
 
 .display_block {
 	display: block;
+}
+
+.login-wraper {
+	min-height: 100%; /* Fallback for browsers do NOT support vh unit */
+	min-height: 100vh; /* These two lines are counted as one :-)       */
+	display: flex;
+	align-items: center;
+}
+
+.login-head {
+	padding: 15px 30px;
+	color: #fff;
+	font-size: 27px;
+	background: #15a74c;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+}
+
+.login-wraper .card .main-inner {
+	background: #fff;
+	padding: 0 30px 30px 30px;
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
+}
+
+.form .form-group {
+	margin-bottom: 0;
+	padding-top: 25px;
+}
+
+.padding-top0 {
+	padding-top: 0 !important;
+}
+
+.padding-top25 {
+	padding-top: 25px !important;
+}
+
+.error-msg, .help-block {
+	color: #f00;
+}
+
+.form-group.floatlbl-padding {
+	padding-top: 16px;
+}
+
+.form-group label.managelabel {
+	color: #363636;
+	float: left;
+	position: static;
+}
+
+.rem-link {
+	color: #0270e0;
+	font-size: 12px;
+}
+.login-wraper .main-inner .form-control {
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+	color: #555;
+	display: block;
+	font-size: 14px;
+	height: 34px;
+	line-height: 1.42857;
+	padding: 6px 12px;
+	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s
+		ease-in-out 0s;
+	width: 100%;
 }
