source code commit

--- a/Real_Estate_Buyer/src/main/webapp/static/css/style/main-style.css
+++ b/Real_Estate_Buyer/src/main/webapp/static/css/style/main-style.css
@@ -1,9 +1,11 @@
-.body {
-	background-color: #525252;
-}
-
-.body-bg {
-	background: #075a9c;
+body {
+	background:url('../../images/images.jpg');
+	background-size:cover;
+	font-family: arial;
+	font-size: 100%;
+	line-height: 1.2em;
+	width: 100%;
+	margin: 0;
 }
 
 .centered-form {
@@ -28,7 +30,7 @@
 }
 
 .login-head {
-	padding: 30px 30px;
+	padding: 20px 30px;
 	color: #fff;
 	font-size: 27px;
 	background: #15a74c;
@@ -38,7 +40,7 @@
 
 .login-wraper .card .main-inner {
 	background: #fff;
-	padding: 0 60px 30px 30px;
+	padding: 0 30px 30px 30px;
 	border-bottom-left-radius: 6px;
 	border-bottom-right-radius: 6px;
 }
@@ -74,12 +76,18 @@
 	padding-top: 40px !important;
 }
 
-.width280{
-	width: 290px
+.width280 {
+    width: 100%;
+    border: 1px solid #ddd;
+    padding: 5px;
+    margin-top: 4px;
+    margin-bottom: 15px;
 }
 
 .error-msg, .help-block {
-	color: #f00;
+    color: #f00;
+    font-size: 14px;
+    margin-bottom: 10px;
 }
 
 .form-group.floatlbl-padding {
@@ -144,14 +152,7 @@ a:hover, a:active {
 }
 
 /* you can structure your code's white space so that it is as readable for when you come back in the future or for other people to read and edit quickly */
-body {
-	font-family: arial;
-	font-size: 100%;
-	line-height: 1.2em;
-	width: 100%;
-	margin: 0;
-	background: #eee;
-}
+
 /* you can put your code all in one line like above */
 #page {
 	margin: 20px;
@@ -201,17 +202,23 @@ body {
 }
 
 #content {
-	margin: 100px 0;
-	background: #fff;
-	padding: 20px;
-	clear: both;
-	text-align: center;
-	font-size: 28px;
+    margin: 100px auto;
+    background: rgba(32, 37, 43, 0.48);
+    padding: 20px 0 8px;
+    text-align: center;
+    font-size: 28px;
+    width: 60%;
+    color: #f4f4f4;
 }
-
+.btns form {
+    float: right;
+    margin-right: 8px;
+}
 #footer {
-	border-bottom: 4px #ccc solid;
-	margin-bottom: 0px;
+    border-bottom: 4px #ccc solid;
+    position: fixed;
+    bottom: 55px;
+    width: 100%;
 }
 
 #footer p {
@@ -229,7 +236,7 @@ body {
 .invalid-error-msg {
 	color: red;
 	font-size: 12px;
-	margin: 0;
+	margin: 6px 0;
 	opacity: .7;
 	left: 0;
 	position: absolute
@@ -459,4 +466,71 @@ body {
 
 .height {
 	height: 36px;
+}
+.btn-block {
+    display: block;
+    width: 100%;
+    background: #51b140;
+    color: #fff;
+    font-size: 16px;
+}
+.panel-title {
+    font-size: 19px;
+}
+.input-sm {
+    font-size: 14px;
+}
+.e-input {
+    width: 100px;
+    border: 1px solid #ddd;
+    padding: 2px 8px;
+    border-radius: 2px;
+}
+.search-facet-box label,.fds-u-is-visually-hidden{
+	color:#fff;
+}
+.fds-u-is-visually-hidden{
+	padding-left:40px;
+}
+button#searchBtn {
+    background: #4caf50;
+    color: #fff;
+}
+.sort{
+    float: right;
+    border: 1px solid #ddd;
+    background: rgba(242, 243, 243, 0.75);
+    padding: 2px 8px;
+}
+.e-icon.-icon-search {
+   border: 1px solid #ddd;
+    background: rgba(242, 243, 243, 0.75);
+}
+.result li {
+    list-style-type: none;
+    background: #f0f0f0;
+    padding: 10px;
+    font-size:16px;
+    margin-bottom:10px;
+}
+ul.result {
+    background: #fff;
+    padding: 20px;
+    margin-top: 15px;
+    max-height: 400px;
+    overflow-y: auto;
+}
+.modal-dialog {
+    width: 550px;
+    margin: 250px auto;
+}
+.modal-body {
+    padding: 15px 32px;
+}
+.textarea{
+	margin-bottom: 10px;
+	border: 1px solid #ddd;
+}
+.moredata{
+	cursor: pointer;
 }
