--- a/Real_Estate_Buyer/src/main/webapp/static/css/style/materialadmin.css
+++ b/Real_Estate_Buyer/src/main/webapp/static/css/style/materialadmin.css
@@ -3215,11 +3215,11 @@ textarea.autosize {
 }
 
 .input-sm {
-	height: 30px;
-	padding: 0 0;
-	font-size: 1em;
-	line-height: 1.5;
-	border-radius: 0px;
+    height: 30px;
+    padding: 0 0;
+    font-size: 14px;
+    line-height: 1.5;
+    border-radius: 0px;
 }
 
 select.input-sm {
